@@ -5,17 +5,13 @@
  - Licensed under the GNU GPL version 3 or higher.
  -}
 
-{-# LANGUAGE CPP #-}
-
 module Git.CurrentRepo where
 
 import Common
 import Git.Types
 import Git.Construct
 import qualified Git.Config
-#ifndef mingw32_HOST_OS
 import Utility.Env
-#endif
 
 {- Gets the current git repository.
  -
@@ -42,17 +38,13 @@ get = do
 				setCurrentDirectory d
 			return $ addworktree wt r
   where
-#ifndef mingw32_HOST_OS
 	pathenv s = do
 		v <- getEnv s
 		case v of
 			Just d -> do
-				void $ unsetEnv s
+				unsetEnv s
 				Just <$> absPath d
 			Nothing -> return Nothing
-#else
-	pathenv _ = return Nothing
-#endif
 
 	configure Nothing (Just r) = Git.Config.read r
 	configure (Just d) _ = do
